--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         </activity>
         <activity android:name=".juego" />
         <activity android:name=".AcercaDe"></activity>
+        <activity android:name=".Preferences"></activity>
+
     </application>
 
 </manifest>
